--- a/Case_Study/task2/src/index.html
+++ b/Case_Study/task2/src/index.html
@@ -6,29 +6,29 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="icon" href="../img/favicon.png" type="image/png">
-  <link rel="stylesheet" href="../assets/vendors/bootstrap/bootstrap.min.css">
-  <link rel="stylesheet" href="../assets/vendors/fontawesome/css/all.min.css">
-  <link rel="stylesheet" href="../assets/vendors/themify-icons/themify-icons.css">
-  <link rel="stylesheet" href="../assets/vendors/linericon/style.css">
-  <link rel="stylesheet" href="../assets/vendors/magnefic-popup/magnific-popup.css">
-  <link rel="stylesheet" href="../assets/vendors/owl-carousel/owl.theme.default.min.css">
-  <link rel="stylesheet" href="../assets/vendors/owl-carousel/owl.carousel.min.css">
-  <link rel="stylesheet" href="../assets/vendors/nice-select/nice-select.css">
-  <link rel="stylesheet" href="../assets/css/style.css">
+  <link rel="icon" href="assets/img/favicon.png" type="image/png">
+  <link rel="stylesheet" href="assets/vendors/bootstrap/bootstrap.min.css">
+  <link rel="stylesheet" href="assets/vendors/fontawesome/css/all.min.css">
+  <link rel="stylesheet" href="assets/vendors/themify-icons/themify-icons.css">
+  <link rel="stylesheet" href="assets/vendors/linericon/style.css">
+  <link rel="stylesheet" href="assets/vendors/magnefic-popup/magnific-popup.css">
+  <link rel="stylesheet" href="assets/vendors/owl-carousel/owl.theme.default.min.css">
+  <link rel="stylesheet" href="assets/vendors/owl-carousel/owl.carousel.min.css">
+  <link rel="stylesheet" href="assets/vendors/nice-select/nice-select.css">
+  <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
   <app-root></app-root>
 
-  <script src="../assets/vendors/jquery/jquery-3.2.1.min.js"></script>
-  <script src="../assets/vendors/bootstrap/bootstrap.bundle.min.js"></script>
-  <script src="../assets/vendors/magnefic-popup/jquery.magnific-popup.min.js"></script>
-  <script src="../assets/vendors/owl-carousel/owl.carousel.min.js"></script>
-  <script src="../assets/vendors/easing.min.js"></script>
-  <script src="../assets/vendors/superfish.min.js"></script>
-  <script src="../assets/vendors/nice-select/jquery.nice-select.min.js"></script>
-  <script src="../assets/vendors/jquery.ajaxchimp.min.js"></script>
-  <script src="../assets/vendors/mail-script.js"></script>
-  <script src="../assets/js/main.js"></script>
+  <script src="assets/vendors/jquery/jquery-3.2.1.min.js"></script>
+  <script src="assets/vendors/bootstrap/bootstrap.bundle.min.js"></script>
+  <script src="assets/vendors/magnefic-popup/jquery.magnific-popup.min.js"></script>
+  <script src="assets/vendors/owl-carousel/owl.carousel.min.js"></script>
+  <script src="vendors/easing.min.js"></script>
+  <script src="assets/vendors/superfish.min.js"></script>
+  <script src="assets/vendors/nice-select/jquery.nice-select.min.js"></script>
+  <script src="assets/vendors/jquery.ajaxchimp.min.js"></script>
+  <script src="assets/vendors/mail-script.js"></script>
+  <script src="assets/js/main.js"></script>
 </body>
 </html>
