--- a/Case_Study/task2/src/index.html
+++ b/Case_Study/task2/src/index.html
@@ -16,6 +16,7 @@
   <link rel="stylesheet" href="assets/vendors/owl-carousel/owl.carousel.min.css">
   <link rel="stylesheet" href="assets/vendors/nice-select/nice-select.css">
   <link rel="stylesheet" href="assets/css/style.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
   <app-root></app-root>
@@ -30,5 +31,6 @@
   <script src="assets/vendors/jquery.ajaxchimp.min.js"></script>
   <script src="assets/vendors/mail-script.js"></script>
   <script src="assets/js/main.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
